Adding a play game method reading user input